--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
   <link href="/build/app.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/@blaze/css@9.2.0/dist/blaze/blaze.css">
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
