--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="module" src="https://unpkg.com/@power-elements/stripe-elements/stripe-elements.js?module"></script>
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
   <link href="/build/app.css" rel="stylesheet">
